tests/specs/run/error_syntax_empty_trailing_line/error_syntax_empty_trailing_line.mjs.out
error: Expression expected
  |
2 | setTimeout(() => {}),
  |                      ~
    at [WILDCARD]/error_syntax_empty_trailing_line.mjs:2:22
