tests/specs/run/error_syntax_empty_trailing_line/error_syntax_empty_trailing_line.mjs
// deno-fmt-ignore-file
// Deliberately using .mjs to avoid triggering dprint
setTimeout(() => {}),
